# news_GRPO

./: .gitignore  README.md  free_disk.sh  pyproject.toml  reward_samples.log.counter
.claude/: CLAUDE.md
GRPO/: GRPO_gsm8k.ipynb  config.yaml  config_test.yaml  gsm8k_reward_grpo_format.py  prepare_gsm8k.py  prompts.py  setup_verl.sh  train_from_config.py  train_grpo.py
GRPO_news/: EFFICIENCY_MONITORING.md  compute_passatk.py  config.yaml  config_news.yaml  config_test.yaml  gsm8k_reward_grpo_format.py  inference.py  monitor_and_validate.sh  monitor_efficiency.py  news_classification_reward.py  prepare_data.py  prompts.py  train_from_config.py  validation_plugin.py
data/gsm8k/: train_sample.parquet  val.parquet  val_sample.parquet
data/news_classification/: train.parquet  val.parquet
docs/: RECORD_Change.md
news_db/: fetch_data.py  main.py  prepare_gsm8k.py  prepare_news_classification.py
validation_logs/: validation_history.jsonl
